# eagine-core

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.rst  toolchain.cmake.bak
config/: CMakeLists.txt  CommonLibs.cmake  EAGineArchitecture.cmake  EAGineBaking.cmake  EAGineBuildType.cmake  EAGineCMake.cmake  EAGineCXXModules.cmake  EAGineCXXModulesClang.cmake  EAGineCXXModulesGNU.cmake  EAGineCommonFindMod.cmake  EAGineCompiler.cmake  EAGineConfig.cmake.in  EAGineCoreCommon.cmake  EAGineCoreCommonBasic.cmake  EAGineCoreCommonFinish.cmake  EAGineCppFeature.cmake  EAGineDefaults.cmake  EAGineEmbed.cmake  EAGineEmbed.cmake.in  EAGineEmbedCommon.cmake  EAGineGitInfo.cmake  EAGineLowProfile.cmake  EAGineOSInfo.cmake  EAGinePackage.cmake  EAGinePaths.cmake  EAGinePolicies.cmake  EAGineStaticAnalysis.cmake  FindBoostSpirit.cmake  FindEAGineBoostSpirit.cmake  FindEAGineCommonLibs.cmake  FindEAGineStacktrace.cmake  FindEAGineSystemd.cmake  FindEAGineZLIB.cmake  GitInfo.cmake  Policies.cmake  SiteConfig.cmake
config/cpp/: test_compiler.cpp
config/tools/: CMakeLists.txt  embed_generator
deploy/: CMakeLists.txt
deploy/debian/: CMakeLists.txt  build-pkg-cfg.in  build-pkg.sh.in  pkg-gen-headers.txt.in
deploy/dpkg/: CMakeLists.txt
deploy/dpkg/compiler/: CMakeLists.txt  build-pkg.sh.in
deploy/dpkg/dev/: CMakeLists.txt  build-pkg-cfg.in  build-pkg.json.in  build-pkg.py.in  build-pkg.sh.in  module-std-opts.cmake
deploy/dpkg/docker/: CMakeLists.txt  build-pkg.sh.in
deploy/dpkg/llvm_snapshot/: 81_llvm.list.in  CMakeLists.txt  build-pkg.sh.in
deploy/dpkg/logging/: CMakeLists.txt  build-pkg.sh.in
deploy/dpkg/tools/: CMakeLists.txt  build-pkg.sh.in  build-pkg.txt.in
deploy/dpkg/user/: CMakeLists.txt  build-pkg.sh.in  deb-changelog  postinst  postrm  preinst
docker/deb_test/dev/: CMakeLists.txt  Dockerfile  docker-compose.yml  entrypoint
example/eagine/: CMakeLists.txt  animated_value.cpp  application_config.cpp  args_within_limits.cpp  array_size.cpp  assert.cpp  base64.cpp  bindump.cpp  build_info.cpp  c_api_wrap.cpp  compress_self.cpp  deb-changelog  dyn_lib_lookup.cpp  eagine-application_config.yaml  edit_distance.cpp  embed_baked.cpp  embed_packed.cpp  embed_self.cpp  encrypt_decrypt.cpp  environment.cpp  extract.cpp  from_string.cpp  hexdump.cpp  id_tag.cpp  identifier.cpp  integer_hash.cpp  interleaved_call.cpp  limit_cast.cpp  log_histogram.cpp  make_index.cpp  matrix.cpp  memoized.cpp  network_sort.cpp  optional_reference.cpp  overloaded.cpp  progress.cpp  progress_bar.cpp  random_bytes.cpp  reflect_enum.cpp  reflect_struct.cpp  (+38 more)
include/: CMakeLists.txt  Sources.cmake  classify_headers.sh  headers.txt  lib_inl.txt  pub_inl.txt
include/eagine/: animated_value.hpp  any_random_engine.hpp  app_config.hpp  app_config.inl  application_config.hpp  application_config.inl  args_within_limits.hpp  assert.hpp  base64.hpp  base64dump.hpp  bindump.hpp  bindump.inl  bit_density.hpp  biteset.hpp  bitfield.hpp  bool_aggregate.hpp  buffer_data.hpp  buffer_size.hpp  build_info.hpp  build_info.inl  byteset.hpp  c_api_wrap.hpp  c_str.hpp  callable_ref.hpp  cleanup_group.hpp  compare.hpp  compiler_info.hpp  compiler_info.inl  compression.hpp  compression.inl  convertible.hpp  data_baking.hpp  double_buffer.hpp  dynamic_library.hpp  edit_distance.hpp  edit_distance.inl  embed.hpp  enum_bitfield.hpp  enum_class.hpp  enum_log.hpp  (+104 more)
include/eagine/c_api/: adapted_function.hpp  api_traits.hpp  buffer_data.hpp  constant.hpp  enum_bitfield.hpp  enum_class.hpp  function.hpp  handle.hpp  key_value_list.hpp  object.hpp  parameter_map.hpp  result.hpp
include/eagine/config/: basic.hpp  build_info.hpp.in  git_info.hpp.in  os_info.hpp.in  site.hpp.in
include/eagine/console/: backend.hpp  console.hpp  console.inl  console_opts.hpp  entry.hpp  entry_kind.hpp  fwd.hpp  iostream_backend.hpp
include/eagine/logging/: asio_backend.hpp  backend.hpp  config.hpp  entry.hpp  entry.inl  entry_arg.hpp  fwd.hpp  logger.hpp  null_backend.hpp  ostream_backend.hpp  proxy_backend.hpp  proxy_backend.inl  root_logger.hpp  root_logger.inl  root_logger_opts.hpp  severity.hpp  syslog_backend.hpp
include/eagine/math/: coordinates.hpp  curve.hpp  functions.hpp  interpolate.hpp  intersection.hpp  io.hpp  matrix.hpp  matrix_ctr.hpp  matrix_gauss.hpp  matrix_identity.hpp  matrix_inverse.hpp  matrix_looking_at.hpp  matrix_orbiting.hpp  matrix_ortho.hpp  matrix_perspective.hpp  matrix_reflection.hpp  matrix_rotation.hpp  matrix_scale.hpp  matrix_translation.hpp  primitives.hpp  scalar.hpp  sign.hpp  tmat.hpp  tvec.hpp  vector.hpp
include/eagine/memory/: address.hpp  align.hpp  align_alloc.hpp  alloc_arena.hpp  alloc_arena.inl  block.hpp  buffer.hpp  buffer_pool.hpp  byte_alloc.hpp  c_realloc.hpp  c_realloc.inl  copy.hpp  default_alloc.hpp  fallback_alloc.hpp  flatten.hpp  fwd.hpp  null_alloc.hpp  null_ptr.hpp  object_storage.hpp  offset_ptr.hpp  offset_span.hpp  shared_alloc.hpp  shared_alloc.inl  span.hpp  span_algo.hpp  split_span.hpp  stack_alloc.hpp  stack_alloc.inl  std_alloc.hpp
include/eagine/progress/: activity.hpp  backend.hpp  default_backend.hpp  fwd.hpp  root_activity.hpp  root_activity.inl
include/eagine/reflect/: bitfield.hpp  config.hpp  data_members.hpp  decl_name.hpp  enumerators.hpp  map_data_members.hpp  map_enumerators.hpp  meta.hpp
include/eagine/serialize/: block_sink.hpp  block_source.hpp  data_buffer.hpp  data_sink.hpp  data_source.hpp  fast_backend.hpp  fputils.hpp  istream_source.hpp  ostream_sink.hpp  packed_block_sink.hpp  packed_block_source.hpp  portable_backend.hpp  read.hpp  read_backend.hpp  (+5 more)
source/: CMakeLists.txt
source/app/: CMakeLists.txt  deb-changelog  ensure-main-key.sh  ensure_main_key.sh  fmd-get.py  fmd-modify.py  fmd_get.py  fmd_modify.py  git-filter.py  log-plot.py  log-psql.sh  log-schema-stats.sh  procman.py  psql-logs-cl.py  psql_logs-cl.py  servicectl.py  xml_logs-cl.py  xml_logs-psql.py  xml_logs-psql.sql
source/lib/: CMakeLists.txt
source/modules/: CMakeLists.txt
submodules/: CMakeLists.txt
(+975 files in other folders)
